--- a/html/innercss.css
+++ b/html/innercss.css
@@ -5,3 +5,17 @@ a{
 .maincard{
     padding: 5px;
 }
+
+.logo{
+ 
+    display: inline-block;
+    /* background-image: url('//cdn.jsdelivr.net/npm/txto@1.5.7/txto.svg'); */
+    content: url('//cdn.jsdelivr.net/npm/txto@1.5.9/txto.svg');
+}
+
+.logo-sml{
+ 
+    display: inline-block;
+    /* background-image: url('//cdn.jsdelivr.net/npm/txto@1.5.7/txto.svg'); */
+    content: url('//cdn.jsdelivr.net/npm/txto@1.5.9/txto-small.svg');
+}
